# negativespoofer

./: CMakeLists.txt  LICENSE.md  README.md  compile_commands.json
.clangd/index/: PiHob.h.882578E1F3CD643C.idx  finder.c.C80809ADB1FC80E7.idx  finder.h.6F64DF73126D53BD.idx  general.h.E74969DFECE6EDB0.idx  hob.h.FF3B5684BBDBEBFA.idx  main.c.D17CAD2E18E71C15.idx  patch.h.E0814C30E0F23725.idx  smbios.h.4AC57403A9549185.idx
pages/: BUGS.md  LINUX.md  USE.md  WINDOWS.md
pkg/: Shell.efi
scripts/: build.sh  clean.sh  image.sh  rebuild.sh  test.sh  vm.sh
src/: finder.c  finder.h  general.h  hob.c  hob.h  main.c  patch.c  patch.h  smbios.c  smbios.h  utils.c  utils.h
src/edk2/: PiHob.h
